--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "^2.49.4",
-    "@tanstack/react-table": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "8.5.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
-    "leaflet": "latest",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
@@ -56,12 +56,15 @@
     "react-hook-form": "latest",
     "react-leaflet": "latest",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "react-to-print": "^3.0.5",
+    "recharts": "^2.15.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest"
+    "zod": "latest",
+    "@tanstack/react-table": "latest",
+    "leaflet": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
